SCORE_DELTA target fixed